updated portfolio page and reorganized repo

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" class="stylesheet">
-    <link rel="stylesheet" href="768.css" class="stylesheet">
-    <link rel="stylesheet" href="640.css" class="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css" class="stylesheet">
+    <link rel="stylesheet" href="assets/css/768.css" class="stylesheet">
+    <link rel="stylesheet" href="assets/css/640.css" class="stylesheet">
     <title>Portfolio</title>
   </head>
 
@@ -39,29 +41,78 @@
         <div class="row">
             <div class="col">
                 
+                <div class="box d-flex justify-content-center">
+                    <a href="https://kevincwashburn.github.io/Code-Refactor/" target="_blank">
+                        <img src="assets/images/screenshots/code-refactor-screenshot.jpg" class="img-small" alt="link to deployed code-refactor page">
+                    </a>
+                        <div class="text">
+                            <h5>Code Refactor</h5>
+                            <a href="https://github.com/kevincwashburn/Code-Refactor" target="_blank">
+                            view repository
+                            </a>
+                        </div>
+                </div>
 
                 <div class="box d-flex justify-content-center">
-                    <img src="img1small.jpg">
+                    <a href="https://kevincwashburn.github.io/Password-Generator/" target="_blank">
+                        <img src="assets/images/screenshots/password-generator-screenshot.jpg" class="img-small" alt="link to deployed password-generator">
+                    </a>
                     <div class="text">
-                        <h2>Placeholder Text 1</h2>
+                        <h5>Password Generator</h5>
+                            <a href="https://github.com/kevincwashburn/Password-Generator" target="_blank">
+                            view repository
+                            </a>
                     </div>
                 </div>
 
                 <div class="box d-flex justify-content-center">
-                    <img src="img4small.jpg">
+                    <a href="https://kevincwashburn.github.io/Web-APIs-Code-Quiz/" target="_blank">
+                        <img src="assets/images/screenshots/js-quiz-screenshot.jpg" class="img-small" alt="link to deployed quiz">
+                    </a>
                     <div class="text">
-                        <h2>Placeholder Text 2</h2>
+                        <h5>Coding Quiz</h5>
+                            <a href="https://github.com/kevincwashburn/Web-APIs-Code-Quiz" target="_blank">
+                            view repository
+                            </a>
                     </div>
                 </div>
 
                 <div class="box d-flex justify-content-center">
-                    <img src="img3small.jpg">
+                    <a href="https://kevincwashburn.github.io/Work-Day-Planner/" target="_blank">
+                        <img src="assets/images/screenshots/planner-screenshot.jpg" class="img-small" alt="link to deployed planner">
+                    </a>
                     <div class="text">
-                        <h2>Placeholder Text 3</h2>
+                        <h5>Work Day Planner</h5>
+                            <a href="https://github.com/kevincwashburn/Work-Day-Planner" target="_blank">
+                            view repository
+                            </a>
                     </div>
                 </div>
 
-                
+                <div class="box d-flex justify-content-center">
+                    <a href="https://kevincwashburn.github.io/Weather-Dashboard/" target="_blank">
+                        <img src="assets/images/screenshots/weather-dashboard-screenshot.jpg" class="img-small" alt="link to deployed weather dashboard">
+                    </a>
+                    <div class="text">
+                        <h5>Weather Dashboard</h5>
+                        <a href="https://github.com/kevincwashburn/Weather-Dashboard" target="_blank">
+                        view repository
+                        </a>
+                    </div>
+                </div>
+
+                <div class="box d-flex justify-content-center">
+                    <a href="https://parmark.github.io/Meal-Cocktail-Randomizer/" target="_blank">
+                        <img src="assets/images/screenshots/dinedash-screenshot.jpg" class="img-small" alt="link to deployed meal and cocktail randomizer">
+                    </a>
+                    <div class="text">
+                        <h5>DineDash</h5>
+                        <a href="https://github.com/parmark/Meal-Cocktail-Randomizer" target="_blank">
+                        view repository
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
 
