--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" class="stylesheet">
-    <link rel="stylesheet" href="768.css" class="stylesheet">
-    <link rel="stylesheet" href="640.css" class="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="assets/css/style.css" class="stylesheet">
+    <link rel="stylesheet" href="assets/css/768.css" class="stylesheet">
+    <link rel="stylesheet" href="assets/css/640.css" class="stylesheet">
     <title>Contact Me</title>
   </head>
 
@@ -45,15 +47,15 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@gmail.com">
+                        <label for="email-form-2">Email</label>
+                        <input type="email" class="form-control" id="email-form-2" placeholder="example@gmail.com">
                     </div>
 
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Message</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
                     </div>
-                    <div class="button-color"><a class="btn btn-outline-secondary" mailto="kevincwashburn@gmail.com" role="button">Submit</a>
+                    <div class="button-color"><a class="btn btn-outline-secondary" href="mailto:kevincwashburn@gmail.com" role="button">Submit</a>
                     </div>
                 </form>
             </div>
