revised index.html first paragraph

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <!-- <div class="row"> -->
             <div class="col-lg-4">
                 <p class="p1">
-                    I am currently a student in the coding bootcamp at UNC Charlotte. I look foward to pursuing
-                    this new career path not only becuase it presents a challenge as I learn
-                    this skill, but because it allows me to be hands-on and creative. I have always been drawn
-                    to getting my hands dirty and creative expression, whether through carpentry work or music, and I believe
-                    the skills I am acquiring now allow me to continue to do just that.
+                   I am a full stack web developer inspired by innovation. Professional and personal experience drive my curiosity and the desire to improve
+                  who I am and what I do. From balancing work and school, to freelancing as a handyman and working in construction, I understand that hard work is 
+                  necessary to transform an idea into a high-quality product. Moreover, whether by learning the fundamentals of guitar, or improvisation on the saxophone, 
+                  music has expanded my creative potential and discipline as well. Naturally, coding is where this creativity, determination, and passion meet. 
+                  These experiences have equipped me with the tools to learn, adapt, and thrive in this constantly evolving industry.
                 </p>
 
                 <p>
