updated index.html linkedin url

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
         <div class="col-lg-4">
             <p class="social">
-                <a href="https://www.linkedin.com/in/kevin-washburn-b1b981196/" target="_blank">
+                <a href="https://www.linkedin.com/in/kevin-washburn/" target="_blank">
                     <i class="fab fa-2x fa-linkedin"></i>
                     view my linkedin profile
                 </a>
